# rspack

./: Cargo.toml
.github/workflows/: get-runner-labels.yml
crates/node_binding/: Cargo.toml  binding.d.ts
crates/node_binding/src/: lib.rs
crates/rspack/src/builder/: mod.rs
crates/rspack/tests/snapshots/: defaults__default_options.snap
crates/rspack_binding_api/src/: runtime.rs
crates/rspack_binding_options/: Cargo.toml
crates/rspack_binding_options/src/options/: raw_output.rs
crates/rspack_core/src/: chunk.rs  external_module.rs  lib.rs  normal_module.rs  normal_module_factory.rs  parser_and_generator.rs  runtime_globals.rs
crates/rspack_core/src/chunk_graph/: chunk_graph_chunk.rs  chunk_graph_module.rs
crates/rspack_core/src/compiler/: mod.rs
crates/rspack_core/src/dependency/: dependency_trait.rs
crates/rspack_core/src/options/: module.rs  output.rs
crates/rspack_core/src/utils/: property_access.rs
crates/rspack_ids/src/: lib.rs  occurrence_chunk_ids_plugin.rs  occurrence_module_ids_plugin.rs
crates/rspack_plugin_asset/src/: lib.rs
crates/rspack_plugin_devtool/src/: eval_dev_tool_module_plugin.rs  eval_source_map_dev_tool_plugin.rs  source_map_dev_tool_plugin.rs
crates/rspack_plugin_javascript/src/: runtime.rs
crates/rspack_plugin_json/src/: lib.rs
crates/rspack_plugin_min_chunk_size/: Cargo.toml
crates/rspack_plugin_min_chunk_size/src/: lib.rs
crates/rspack_plugin_progress/src/: lib.rs
crates/rspack_plugin_runtime/src/: runtime_plugin.rs
website/components/: PluginSupportStatusTable.tsx
website/docs/en/config/: module.mdx  (+1 more)
(+35 files in other folders)
