[package]
description = "rspack min chunk size plugin"
edition     = "2021"
license     = "MIT"
name        = "rspack_plugin_min_chunk_size"
repository  = "https://github.com/web-infra-dev/rspack"
version     = "0.2.0"

[dependencies]
rspack_collections = { workspace = true }
rspack_core        = { workspace = true }
rspack_error       = { workspace = true }
rspack_hook        = { workspace = true }
tracing            = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["tracing"]
